crates/service/tests/references/snapshots/features__references__func__call_ident_idx-2.snap
---
source: crates/service/tests/references/func.rs
expression: exclude_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 3,
        "character": 14
      },
      "end": {
        "line": 3,
        "character": 15
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 3,
        "character": 23
      },
      "end": {
        "line": 3,
        "character": 28
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 5,
        "character": 21
      },
      "end": {
        "line": 5,
        "character": 26
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 6,
        "character": 15
      },
      "end": {
        "line": 6,
        "character": 20
      }
    }
  }
]
