crates/service/tests/references/snapshots/features__references__func__func_in_implicit_module.snap
---
source: crates/service/tests/references/func.rs
expression: include_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 1,
        "character": 6
      },
      "end": {
        "line": 1,
        "character": 11
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 12
      },
      "end": {
        "line": 2,
        "character": 17
      }
    }
  }
]
